--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "typecheck": "tsc --noEmit",
     "lint": "next lint"
   },
@@ -38,6 +38,9 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -54,21 +57,19 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "genkit-cli": "^1.8.0",
+    "@types/handlebars": "^4.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "rimraf": "^2.7.1",
-    "inflight": "^1.0.6",
+    "genkit-cli": "^1.8.0",
     "glob": "^7.2.3",
-    "@types/handlebars": "^4.1.0"
+    "inflight": "^1.0.6",
+    "postcss": "^8",
+    "rimraf": "^2.7.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.8.3"
   }
 }
